# CompetitiveProgramming

./: .clangd  .gitignore  CMakeLists.txt  README.md  run
.arti/ws/: .cache.lua  launch.lua  state.lua  tasks.lua
.automaton/: config.json  launch.json  state.json  tasks.json  variables.json
Problems/Codeforces/: eGovernment.cpp
Problems/ICPC/: ICPC_JeffreysAmbition.cpp
Problems/Kattis/: AmalgamatedArtichokes.cpp  BuildDependencies.cpp  BurrowsWheeler.cpp  FenwickTree.cpp  Freckles.cpp  Golfbot.cpp  JustForSidekicks.cpp  MaximumFlow.cpp  NatureReserve.cpp  PolynomialMultiplication.cpp  PowerStrings.cpp  StringMultimatching.cpp  StringsMatching.cpp  Supercomputer.cpp  Tiles.cpp  WheresMyInternet.cpp
Problems/OmegaUp/: ContandoMenores.cpp  Factorial.cpp  FelizEncuentro.cpp  FraseOculta.cpp  Marconacci.cpp  Reactor.cpp  RecursividadBeta.cpp  RotacionIzquierda.cpp  VirusDeComputadora.cpp
Problems/Random/: Random.cpp  SunAndMoon.cpp  TriangleContainment.cpp
Problems/UVA/: CaesarCipher.cpp  GalacticBonding.cpp  ILoveStrings.cpp  Potentiometers.cpp  SecretWord.cpp  Zapping.cpp  config.cmake
Problems/VJudge/: BuildDependencies.cpp  CaesarCipher.cpp  Freckles.cpp  MaximumFlow.cpp  MinimumCut.cpp  NatureReserve.cpp  Passwords.cpp  RADutyScheduler.cpp  SmallestKMP.cpp  SubstringProblem.cpp
Samples/Graphs/: FlowGraph.cpp  UFDS.cpp
include/DataStructures/: FenwickTree.hpp  SegmentTree.hpp
include/Graphs/: DepthRankedUFDS.hpp  FlowGraph.hpp  FordFulkerson.hpp  SizeRankedUFDS.hpp  UFDS.hpp
include/Math/: FFT.hpp  PolynomialMultiplication.hpp
include/Strings/: AhoCorasick.hpp  KMPSearch.hpp  SuffixArray.hpp  Trie.hpp  (+1 more)
(+58 files in other folders)
